build_output.txt
$ tsc --skipLibCheck && cd native/compiler-native && bun run build
$ napi build --release
   Compiling compiler-native v0.1.0 (/Users/judahsullivan/Personal/zenith/zenith-compiler/native/compiler-native)
error: unknown start of token: `
   --> src/codegen.rs:566:20
    |
566 |   const __styles = `{}`.replace(/`/g, '\\\\`');
    |                    ^
    |
help: Unicode character '`' (Grave Accent) looks like ''' (Single Quote), but it is not
    |
566 -   const __styles = `{}`.replace(/`/g, '\\\\`');
566 +   const __styles = '{}`.replace(/`/g, '\\\\`');
    |

error: unknown start of token: `
   --> src/codegen.rs:566:23
    |
566 |   const __styles = `{}`.replace(/`/g, '\\\\`');
    |                       ^
    |
help: Unicode character '`' (Grave Accent) looks like ''' (Single Quote), but it is not
    |
566 -   const __styles = `{}`.replace(/`/g, '\\\\`');
566 +   const __styles = `{}'.replace(/`/g, '\\\\`');
    |

error: unknown start of token: `
   --> src/codegen.rs:566:34
    |
566 |   const __styles = `{}`.replace(/`/g, '\\\\`');
    |                                  ^
    |
help: Unicode character '`' (Grave Accent) looks like ''' (Single Quote), but it is not
    |
566 -   const __styles = `{}`.replace(/`/g, '\\\\`');
566 +   const __styles = `{}`.replace(/'/g, '\\\\`');
    |

error: character literal may only contain one codepoint
   --> src/codegen.rs:566:39
    |
566 |   const __styles = `{}`.replace(/`/g, '\\\\`');
    |                                       ^^^^^^^
    |
help: if you meant to write a string literal, use double quotes
    |
566 -   const __styles = `{}`.replace(/`/g, '\\\\`');
566 +   const __styles = `{}`.replace(/`/g, "\\\\`");
    |

error: character literal may only contain one codepoint
   --> src/codegen.rs:567:39
    |
567 |   if (__styles && typeof document !== 'undefined') {
    |                                       ^^^^^^^^^^^
    |
help: if you meant to write a string literal, use double quotes
    |
567 -   if (__styles && typeof document !== 'undefined') {
567 +   if (__styles && typeof document !== "undefined") {
    |

error: character literal may only contain one codepoint
   --> src/codegen.rs:568:73
    |
568 |     const styleTag = document.head.querySelector('style[data-zen-styles]') || document.createElement('style');
    |                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
help: if you meant to write a string literal, use double quotes
    |
568 -     const styleTag = document.head.querySelector('style[data-zen-styles]') || document.createElement('style');
568 +     const styleTag = document.head.querySelector('style[data-zen-styles]") || document.createElement("style');
    |

error[E0762]: unterminated character literal
   --> src/codegen.rs:568:108
    |
568 |     const styleTag = document.head.querySelector('style[data-zen-styles]') || document.createElement('style');
    |                                                                                                            ^^^

For more information about this error, try `rustc --explain E0762`.
error: could not compile `compiler-native` (lib) due to 7 previous errors
[31m[1mInternal Error[22m[39m: Command failed: cargo build --release
    at genericNodeError (node:internal/errors:985:15)
    at wrappedFn (node:internal/errors:539:14)
    at checkExecSyncError (node:child_process:925:11)
    at Object.execSync (node:child_process:997:15)
    at BuildCommand.<anonymous> (/Users/judahsullivan/Personal/zenith/zenith-compiler/native/compiler-native/node_modules/.bin/napi:11529:30)
    at Generator.next (<anonymous>)
    at /Users/judahsullivan/Personal/zenith/zenith-compiler/native/compiler-native/node_modules/.bin/napi:3526:69
    at new Promise (<anonymous>)
    at __awaiter$1 (/Users/judahsullivan/Personal/zenith/zenith-compiler/native/compiler-native/node_modules/.bin/napi:3522:10)
    at BuildCommand.execute (/Users/judahsullivan/Personal/zenith/zenith-compiler/native/compiler-native/node_modules/.bin/napi:11299:16)
error: script "build" exited with code 1
error: script "build" exited with code 1
